--- a/shop/shop.css
+++ b/shop/shop.css
@@ -15,7 +15,6 @@
 
 .banner{
     position: relative;
-    
 }
 
 .bg{
@@ -42,13 +41,18 @@
 }
 
 .bg:hover::after{
-    filter: blur(3px);
+    filter: blur(2px);
+}
+
+.bg:hover h2{
+    transform: scale(1.1);
 }
 
 .bg h2{
     font-family: var(--f5);
     font-size: 4vw;
     z-index: 2;
+    transition: transform .3s;
 }
 
 .navbar-brand{
