--- a/shop/shop.css
+++ b/shop/shop.css
@@ -13,6 +13,26 @@
     justify-content: center;
 }
 
+.spinner-container{
+    position: fixed;
+    top: 0;
+    z-index: 20;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    flex-direction: column;
+}
+
+.spinner-text h4{
+    color: #0d6efd;
+    font-family: var(--f2);
+    font-size: 50px;
+}
+
 .banner{
     position: relative;
 }
